# KiwiMapper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
headers/: KiwiInjector.h
src/: KiwiInjector.cpp  KiwiMapper.cpp  gui.cpp  logic.cpp
